[gd_scene load_steps=11 format=3 uid="uid://ckv4x8qy6x8wq"]

[ext_resource type="Script" path="res://main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/voxel/chunk_manager.gd" id="2_chunk_manager"]
[ext_resource type="Script" path="res://scripts/world/world_generator.gd" id="3_world_gen"]
[ext_resource type="Script" path="res://scripts/player/player.gd" id="4_player"]
[ext_resource type="Script" path="res://scripts/player/player_camera.gd" id="5_camera"]
[ext_resource type="Script" path="res://scripts/player/block_interaction.gd" id="6_interaction"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_sky"]
sky_top_color = Color(0.35, 0.55, 0.85, 1)
sky_horizon_color = Color(0.65, 0.75, 0.9, 1)
ground_bottom_color = Color(0.15, 0.1, 0.08, 1)
ground_horizon_color = Color(0.35, 0.3, 0.25, 1)

[sub_resource type="Sky" id="Sky_main"]
sky_material = SubResource("ProceduralSkyMaterial_sky")

[sub_resource type="Environment" id="Environment_main"]
background_mode = 2
sky = SubResource("Sky_main")
ambient_light_source = 2
ambient_light_color = Color(0.6, 0.65, 0.75, 1)
ambient_light_energy = 0.5
tonemap_mode = 2
ssao_enabled = true
ssil_enabled = true

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.35
height = 1.8

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_main")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 0, 50, 0)
shadow_enabled = true
shadow_bias = 0.05
directional_shadow_mode = 1

[node name="ChunkManager" type="Node3D" parent="."]
script = ExtResource("2_chunk_manager")

[node name="WorldGenerator" type="Node" parent="."]
script = ExtResource("3_world_gen")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 60, 0)
script = ExtResource("4_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="PlayerCamera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0)
current = true
fov = 70.0
near = 0.1
far = 500.0
script = ExtResource("5_camera")

[node name="BlockInteraction" type="Node" parent="Player"]
script = ExtResource("6_interaction")
